--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
   "name": "TranscribeAI",
   "private": true,
-  "version": "1.1.0",
+  "version": "2.0.0",
   "type": "module",
   "author": "Ninh Tran <ninhtran@umn.edu>",
   "main": "dist-electron/main.js",
   "description": "TranscribeAI - A desktop application for image and audio transcription using AI",
   "scripts": {
-    "build:python": "pyinstaller --onefile --distpath python/dist --workpath python/build --specpath python/build python/preprocess_to_png.py && pyinstaller --onefile --distpath python/dist --workpath python/build --specpath python/build python/image_transcribe.py && pyinstaller --onefile --distpath python/dist --workpath python/build --specpath python/build --add-binary \"$(python3 -c 'from imageio_ffmpeg import get_ffmpeg_exe; print(get_ffmpeg_exe())')\":. python/audio_transcribe.py && pyinstaller --onefile --distpath python/dist --workpath python/build --specpath python/build python/transcript_quality_check.py",
     "dev": "npm-run-all --parallel dev:react dev:electron",
     "dev:react": "vite",
     "dev:electron": "npm run transpile:electron && cross-env NODE_ENV=development electron .",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "transpile:electron": "tsc --project src/electron/tsconfig.json",
-    "dist:mac": "npm run build:python && npm run transpile:electron && npm run build && electron-builder --mac --arm64",
-    "dist:win": "npm run build:python && npm run transpile:electron && npm run build && electron-builder --win --x64",
-    "dist:linux": "npm run build:python && npm run transpile:electron && npm run build && electron-builder --linux --x64",
+    "dist:mac": "npm run transpile:electron && npm run build && electron-builder --mac --arm64",
+    "dist:win": "npm run transpile:electron && npm run build && electron-builder --win --x64",
+    "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64",
     "test:e2e": "playwright test",
     "test:unit": "vitest src"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "electron-store": "^10.0.1",
+    "electron-updater": "^6.3.4",
     "execa": "^9.5.2",
-    "python-shell": "^5.0.0",
+    "ffmpeg-static": "^5.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
